# rag-slack-bot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  README_SETUP.md  REINDEX_ULTIMATE.sh  START_BOT.sh  START_BOT_WITH_TUNNEL.sh  START_INDEXING.sh  cloudflared-config.yml  debug_document_structure.py  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  index_office_files.py  index_parallel.py  index_ultimate.py  list_headings.py  pyproject.toml  test_llama_integration.py
app/: config.py  main.py  web_server.py
app/chunking/: __init__.py  models.py  parser.py  strategies.py
app/embedding/: __init__.py  indexer.py  vectorizer.py
app/google_docs/: __init__.py  client.py  parser.py
app/llm/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  ollama.py  openai.py
app/query/: __init__.py  models.py  processor.py
app/slack/: __init__.py  bot.py
app/teams/: __init__.py  handler.py  webhook.py
docs/: architecture.md  implementation-plan.md
scripts/: check_vector_metadata.py  debug_tab_parsing.py  debug_tab_structure.py  dev_chroma.sh  inspect_vector_db.py  read_document_content.py  test_gemini_config.py  test_progress_indexing.py  test_quick_reindex.py  test_tab_id_fix.py  test_tab_properties.py  validate_all_tabs.py  validate_chunking.py  validate_complete_pipeline.py  validate_google_docs_integration.py  validate_slack_bot.py  validate_vector_database.py  validate_vector_database_fast.py
teams-app-package/: README.md
tests/: test_config.py  test_google_docs.py  test_llm_factory.py  test_llm_providers.py
